style: overflow fix

--- a/src/components/CSS/TimetableScreen.css
+++ b/src/components/CSS/TimetableScreen.css
@@ -30,6 +30,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  overflow-x: hidden;
 }
 .timetableButtons{
   display: flex;
